[package]
name = "lcu_driver"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
base64 = "0.13"

[profile.dev]
split-debuginfo = "unpacked"
[profile.test]
split-debuginfo = "unpacked"
